# presentation/controllers/controllers.go
@@ -4,6 +4,7 @@ import(
 	"github.com/gorilla/mux"
 	"log"
 	"net/http"
+    "github.com/gorilla/handlers"
 	services "services"
 	httpSwagger "github.com/swaggo/http-swagger"
 	)
@@ -19,6 +20,7 @@ import(
 	 
 	 func InitRoutesByGorillaMux(){
 		myRouter := mux.NewRouter().StrictSlash(true)
+		
 		myRouter.HandleFunc("/", services.HomePage).Methods("GET")
 		myRouter.HandleFunc("/migration", services.CreateDatabaseSchema).Methods("POST")
 		myRouter.HandleFunc("/products", services.ReturnAllProducts).Methods("GET")
@@ -32,8 +34,15 @@ import(
 		myRouter.HandleFunc("/user/login", services.LoginUserWithPassword).Methods("POST")
 		myRouter.HandleFunc("/user/loginViaGoogle", services.LoginUserViaGoogle).Methods("GET")
 		myRouter.HandleFunc("/user/{authcode}", services.GetUserByAuthCode).Methods("GET")
+		myRouter.HandleFunc("/scene", services.CreateScene).Methods("POST")
+		myRouter.HandleFunc("/scene/{label}",services.GetSceneByLabel).Methods("GET")
+		myRouter.HandleFunc("/scene/{id}", services.UpdateScene).Methods("PUT")
 		myRouter.HandleFunc("/googlecallback", services.HandleGoogleCallback).Methods("GET")
 		myRouter.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
-		log.Fatal(http.ListenAndServe(":9000", myRouter))
+		headersOk := handlers.AllowedHeaders([]string{"X-Requested-With"})
+        originsOk := handlers.AllowedOrigins([]string{"*","http://127.0.0.1:8000","http://localhost:8000","http://localhost:9000","http://localhost:9000/products"})
+        methodsOk := handlers.AllowedMethods([]string{"GET", "HEAD", "POST", "PUT", "OPTIONS"})
+		log.Fatal(http.ListenAndServe(":9000", handlers.CORS(originsOk, headersOk, methodsOk)(myRouter)))
+		
 	 }
 	 
